test_regress/t/t_param_concat_bad.out
%Warning-WIDTHCONCAT: t/t_param_concat.v:17:12: Unsized numbers/parameters not allowed in concatenations.
                                              : ... note: In instance 't'
   17 |       if ({UNSIZED, UNSIZED + 1} != {32'd10, 32'd11}) $stop;
      |            ^~~~~~~
                      ... For warning description see https://verilator.org/warn/WIDTHCONCAT?v=latest
                      ... Use "/* verilator lint_off WIDTHCONCAT */" and lint_on around source to disable this message.
%Warning-WIDTHCONCAT: t/t_param_concat.v:17:19: Unsized numbers/parameters not allowed in replications.
                                              : ... note: In instance 't'
   17 |       if ({UNSIZED, UNSIZED + 1} != {32'd10, 32'd11}) $stop;
      |                   ^
%Warning-WIDTHCONCAT: t/t_param_concat.v:18:14: Unsized numbers/parameters not allowed in replications.
                                              : ... note: In instance 't'
   18 |       if ({2{UNSIZED}} != {32'd10, 32'd10}) $stop;
      |              ^~~~~~~
%Error: Exiting due to
